# llm-wiki-mcp

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  server.json
.claude-plugin/: marketplace.json
.github/workflows/: ci.yml
skills/wiki-ingest/: SKILL.md
skills/wiki-init/: SKILL.md
skills/wiki-init/templates/: CLAUDE.md.template  log.md.template  mcp-wiring.md
skills/wiki-lint/: SKILL.md
skills/wiki-query/: SKILL.md
skills/wiki-update/: SKILL.md
src/llm_wiki_mcp/: __init__.py  errors.py  log_format.py  models.py  parser.py  server.py  slug.py
src/llm_wiki_mcp/skills/wiki-ingest/: LICENSE.txt
src/llm_wiki_mcp/skills/wiki-init/templates/: CLAUDE.md.template  index.md.template  mcp-wiring.md
src/llm_wiki_mcp/skills/wiki-lint/: LICENSE.txt
src/llm_wiki_mcp/skills/wiki-query/: SKILL.md
src/llm_wiki_mcp/storage/: __init__.py  gdrive.py  local.py
src/llm_wiki_mcp/tools/: inventory.py  log_append.py  read.py  write_page.py
tests/_fakes/: drive.py
tests/integration/: test_gdrive_real.py  test_inventory.py  test_log_append.py  test_read.py  test_server.py  test_write_page.py
tests/security/: test_path_traversal.py
tests/unit/: test_errors.py  test_fake_drive.py  test_gdrive_storage.py  test_log_format.py  test_models.py  test_parser.py  test_public_api.py  test_sdist_contents.py  test_skills_packaging.py  test_slug.py  test_storage_local.py  test_storage_protocol.py  test_typed_package.py  test_version_consistency.py
